# llama_parse

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  extract.md  parse.md  pyproject.toml  report.md  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue.md
.github/workflows/: build_package.yml  publish_release.yml  unit_test.yml
examples/: demo_advanced.ipynb  demo_advanced_astradb.ipynb  demo_advanced_weaviate.ipynb  demo_api.ipynb  demo_astradb.ipynb  demo_basic.ipynb  demo_elasticsearch_vectordb.ipynb  demo_excel.ipynb  demo_get_charts.ipynb  demo_insurance.ipynb  demo_json.ipynb  demo_json_parsing.ipynb  demo_json_tour.ipynb  demo_languages.ipynb  demo_mongodb.ipynb  demo_openai_agent.ipynb  demo_parsing_instructions.ipynb  demo_starter_multimodal.ipynb  demo_starter_parse_selected_pages.ipynb  demo_table_comparisons.ipynb
examples/advanced_rag/: dynamic_section_retrieval.ipynb
examples/agents/: demo_simple_openai_agent.ipynb
examples/caltrain/: caltrain_text_mode.ipynb
examples/data/: nvidia_quarterly_revenue_trend_by_market.xlsx
examples/excel/: dcf_rag.ipynb  o1_excel_rag.ipynb
examples/extract/: resume_screening.ipynb
examples/knowledge_graphs/: kg_agent.ipynb
examples/multimodal/: claude_parse.ipynb  gpt4o_mini.ipynb  insurance_rag.ipynb  legal.ipynb  legal_rag.ipynb  multimodal_contextual_retrieval_rag.ipynb  multimodal_rag_ppt.ipynb  multimodal_rag_slide_deck.ipynb  multimodal_report_generation.ipynb  multimodal_report_generation_agent.ipynb  product_manual.ipynb  product_manual_rag.ipynb
examples/other_files/: demo_ppt_basic.ipynb  demo_ppt_financial.ipynb
examples/parse/: demo_advanced.ipynb  demo_advanced_astradb.ipynb  demo_advanced_weaviate.ipynb  demo_api.ipynb  demo_astradb.ipynb  demo_basic.ipynb  demo_elasticsearch_vectordb.ipynb  demo_excel.ipynb  demo_get_charts.ipynb  demo_insurance.ipynb  demo_json.ipynb  demo_json_parsing.ipynb  demo_json_tour.ipynb  demo_languages.ipynb  demo_mongodb.ipynb  demo_parsing_instructions.ipynb  demo_starter_multimodal.ipynb  demo_starter_parse_selected_pages.ipynb  demo_table_comparisons.ipynb
examples/parsing_instructions/: export_report_document.md  parsing_instructions.ipynb  purchase_order_document.md
examples/parsing_modes/: demo_auto_mode.ipynb
examples/report/: basic_report.ipynb
examples/test_tesla_impact_report/: test_gpt4o.ipynb
examples/vector_stores/: demo_advanced_astradb.ipynb  demo_astradb.ipynb  demo_qdrant.ipynb
llama_cloud_services/: __init__.py
llama_cloud_services/extract/: README.md  __init__.py  extract.py  utils.py
llama_parse/: README.md  __init__.py  base.py  pyproject.toml  tool.py  utils.py
llama_parse/cli/: main.py
llama_parse/llama_parse/: __init__.py  base.py  utils.py
llama_parse/llama_parse/cli/: main.py
llama_parser/: __init__.py  base.py
tests/: test_reader.py
(+48 files in other folders)
