[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["llama_cloud_services"]
python_version = "3.10"

[tool.poetry]
name = "llama-cloud-services"
version = "0.6.0"
description = "Tailored SDK clients for LlamaCloud services."
authors = ["Logan Markewich <logan@runllama.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "llama_cloud_services"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
llama-index-core = ">=0.11.0"
llama-cloud = "^0.1.11"
pydantic = "!=2.10"
click = "^8.1.7"
python-dotenv = "^1.0.1"
eval-type-backport = {python = "<3.10", version = "^0.2.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "*"
ipykernel = "^6.29.0"
pre-commit = "3.2.0"
autoevals = "^0.0.114"
deepdiff = "^8.1.1"
ipython = "^8.12.3"
jupyter = "^1.1.1"
mypy = "^1.14.1"

[tool.poetry.scripts]
llama-parse = "llama_cloud_services.parse.cli.main:parse"
